# eye-ai-model-template

./: CLAUDE.md  README.md  experiment-decisions.md  pyproject.toml
docs/configuration/: notebooks.md  overview.md
docs/getting-started/: creating-notebooks.md  quick-start.md
docs/test-plans/: 2026-05-20-e2e-multipersona.md  e2e-bootstrap.md  e2e-orchestrator.md
docs/workflow/: experiments.md
findings/analyst/: 03-roc-notebook-multirun-plot-overwrite.md
findings/setup/: 01-load-cifar10-check-auth-broken.md  02-split-dataset-include-tables-must-list-anchor.md  03-include-tables-feature-name-vs-table-name.md  04-load-cifar10-not-idempotent-after-partial-failure.md  05-local-db-not-idempotent-on-second-denormalize.md
notebooks/: roc_analysis.ipynb
src/: model_runner.py
src/configs/: base.py  deriva.py  roc_analysis.py
src/configs/dev/: datasets_localhost.py  deriva_localhost.py
src/models/: cifar10_cnn.py  simple_model.py
src/scripts/: __init__.py  _cifar10_assets.py  _cifar10_datasets.py  _cifar10_schema.py  load_cifar10.py
tests/: test_auto_description.py  test_cifar10_datasets.py  test_notebook_examples.py  test_runner_bag_dispatch.py  test_runner_seed.py
